--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="net.atredroid.gpsbasic" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="7"/>
     <application android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity android:label="@string/app_name" android:name="gpsbasic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
