--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest android:versionCode="1" android:versionName="1.0"
     package="net.atredroid.gpsbasic" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="7"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" android:debuggable="true">
         <activity android:label="@string/app_name" android:name="gpsbasic">
@@ -11,5 +13,4 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 </manifest>
